# grasp-python

./: README.org  pyproject.toml
grasp/: abstract_grasp.py  evaluator.py  solution.py
grasp/qbf/: grasp_qbf.py  qbf.py  qbf_inverse.py
